# RAG

./: .env.example  .exmu-cfg1.data  Alpha.py  README.md  Sql_commands.txt  Sqlconnection.py  pyproject.toml  requirements.txt  s -ExecutionPolicy RemoteSigned) ; (& dAgenticAILangChainProject.venvScriptsActivate.ps1)
LangchainStart/: LiveNewsAgent.ipynb  StructuredOutput.ipynb  basic.ipynb  messages.ipynb  streaming.ipynb  tools.ipynb
LangchainStart/DeepAgents/: 1_basicsdeepagent.ipynb  basic.ipynb
LangchainStart/Evaluation/: basic_agent.ipynb  rag_evaluation.ipynb
LangchainStart/Langraph/: chatbot.ipynb
LangchainStart/Loaders/: text_loader.ipynb
LangchainStart/Loaders/data/CSV/: text.txt  text2.txt  text3.txt
LangchainStart/RAG-Data-Pipeline/: datamanage.ipynb
LangchainStart/RAG-Data-Pipeline/data/vector_store/: chroma.sqlite3
LangchainStart/VectorLessRag/: VectorlessRag.ipynb  vectorlessOfline.ipynb
LangchainStart/middleware/: HumanInLoop.ipynb  summarization.ipynb
Langraph/: Basic.ipynb
Projects/MCP/: client.py  maths_server.py  weather.py
Projects/YT-ChatBot/: chatbot.ipynb  startup.ipynb  yt-bot.ipynb
