[project]
name = "langchainproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
]

[dependency-groups]
dev = [
    "langchain",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
langchainproject = { workspace = true }
